q-param link fixes

--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -2519,7 +2519,7 @@ components:
           description:  |
             A standard query parameter is used to search for specific values. 
             
-            See: [Standard practises - Query parameter](https://developer.emporix.io/docs/content/q-param)
+            See: [Standard practises - Query parameter](https://developer.emporix.io/api-references/standard-practices/q-param)
     searchQuery:
       type: object
       additionalProperties: false
@@ -2671,7 +2671,7 @@ components:
       description:  |
         A standard query parameter is used to search for specific values. 
         
-        See: [Standard practises - Query parameter](https://developer.emporix.io/docs/content/q-param)
+        See: [Standard practises - Query parameter](https://developer.emporix.io/api-references/standard-practices/q-param)
       schema:
         type: string
         example: 'name:{productName}'
