--- a/checkout/cart/api-reference/api.yml
+++ b/checkout/cart/api-reference/api.yml
@@ -5254,7 +5254,7 @@ components:
         fees:
           allOf:
             - $ref: '#/components/schemas/calculatedPrice'
-            - description: The sum of all fees applied on the line items plus the payment fee *before discounts*
+            - description: The sum of all fees applied on the line items plus the payment fee *before discounts*.
         totalFee:
           allOf:
             - $ref: '#/components/schemas/calculatedPriceWithDiscounts'
