--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -4,9 +4,19 @@ info:
   version: ''
   description: |
     The service facilitates and streamlines e-commerce processes of product marketing.
+    ***
+    **Key Features**
+     * Integration with https://platform.openai.com/ platform
+     * Possibility to generate product descriptions 
+    ***
+    **Key Benefits** 
+     * Product managers can facilitate and streamline the process of creating and updating product descriptions
+     * Creating product descriptions that gain more attention and interest by adapting various writing styles
+     * Consistency in tone and language
+     * Increased visibility resulting from optimization for search engines
   contact: {}
 servers:
-  - url: 'http://api.emporix.io'
+  - url: 'https://api.emporix.io'
 paths:
   '/ai-service/{tenant}/texts':
     parameters:
@@ -45,7 +55,7 @@ paths:
         If you want to use your own OpenAI account with a different AI model please contact our [Emporix Support Team](mailto:support@emporix.com) to negotiate the model and usage.
         ***
 
-        ###Required scopes###
+        ### Required scopes
 
         * `ai.text_manage`
       security:
@@ -88,7 +98,7 @@ paths:
         Emporix uses the gpt-4o-mini model by default. If you want to use your own OpenAI account with a different AI model please contact our [Emporix Support Team](mailto:support@emporix.com) to negotiate the model and usage.
         ***
 
-        ###Required scopes###
+        ### Required scopes
 
         * `ai.completion_manage`
       security:
@@ -98,6 +108,139 @@ paths:
         $ref: '#/components/requestBodies/Completion'
       tags:
         - AI Completions
+  '/ai-service/{tenant}/agents/chat':
+    parameters:
+      - schema:
+          type: string
+        name: tenant
+        in: path
+        required: true
+      - schema:
+          type: string
+          format: uuid
+        name: session-id
+        in: header
+        description: Unique session's identifier which allows for storing the context of the chat. It will be generated if not provided.
+    post:
+      summary: Agent's Chat
+      operationId: POST-ai-agents-chat
+      x-stability: preview
+      responses:
+        '200':
+          $ref: '#/components/responses/200_resp_GET_agent_chat'
+        '400':
+          $ref: '#/components/responses/400_resp_common'
+        '401':
+          $ref: '#/components/responses/401_resp_common'
+        '403':
+          $ref: '#/components/responses/403_resp_common'
+        '500':
+          $ref: '#/components/responses/500_resp_common'
+      description: |-
+        Allows for communication with Emporix's agents.
+
+
+        ***
+        Prerequisite: Using the AI service requires an API token, you have to either configure your own OpenAI account, or use the Emporix one. To configure your own OpenAI token, use the configuration service by storing the token under `openAiApiToken` key. 
+        
+        If you don't provide your own OpenAI token, the Emporix one is used with the following limits: 3 mln input tokens and 1 mln output tokens. When you reach the limit, the next requests are rejected and you have to provide your own OpenAI token. 
+        Emporix uses the gpt-4o-mini model by default. If you want to use your own OpenAI account with a different AI model please contact our [Emporix Support Team](mailto:support@emporix.com) to negotiate the model and usage.
+        ***
+
+        ### Required scopes
+
+        * `ai.completion_manage`
+      security:
+        - OAuth2:
+            - ai.completion_manage
+      requestBody:
+        $ref: '#/components/requestBodies/AgenticChat'
+      tags:
+        - Agentic
+  '/ai-service/{tenant}/agents/templates':
+    parameters:
+      - schema:
+          type: string
+        name: tenant
+        in: path
+        required: true
+      - $ref: '#/components/parameters/qParam'
+      - $ref: '#/components/parameters/pageSize'
+      - $ref: '#/components/parameters/pageNumber'
+      - $ref: '#/components/parameters/sort'
+      - $ref: '#/components/parameters/fields'
+      - $ref: '#/components/parameters/header_xTotalCount'
+    get:
+      summary: Get available agent templates
+      operationId: GET-ai_agents-templates
+      x-stability: preview
+      responses:
+        '200':
+          description: List of available agent templates
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AgentTemplateResponse'
+              examples:
+                Agent Templates Response:
+                  $ref: '#/components/examples/AgentTemplatesResponse'
+        '401':
+          $ref: '#/components/responses/401_resp_common'
+        '403':
+          $ref: '#/components/responses/403_resp_common'
+      description: |-
+        Retrieves agent templates which can be later use as a base for custom agents.
+        
+        ### Required scopes
+
+        * `ai.agent_read`
+      security:
+        - OAuth2:
+            - ai.agent_read
+      tags:
+        - Agentic
+  '/ai-service/{tenant}/agents/templates/search':
+    parameters:
+      - schema:
+          type: string
+        name: tenant
+        in: path
+        required: true
+    post:
+      summary: Search agent templates
+      operationId: POST-ai_agents-templates-search
+      x-stability: preview
+      responses:
+        '200':
+          description: List of available agent templates
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AgentTemplateResponse'
+              examples:
+                Agent Templates Response:
+                  $ref: '#/components/examples/AgentTemplatesResponse'
+        '401':
+          $ref: '#/components/responses/401_resp_common'
+        '403':
+          $ref: '#/components/responses/403_resp_common'
+      description: |-
+        Searches for agent templates based on the provided query.
+                
+        ### Required scopes
+
+        * `ai.agent_read`
+      security:
+        - OAuth2:
+            - ai.agent_read
+      requestBody:
+        $ref: '#/components/requestBodies/AgentTemplateSearch'
+      tags:
+        - Agentic
 components:
   schemas:
     ErrorMessage:
@@ -138,6 +281,28 @@ components:
               properties:
                 errorcode:
                   type: string
+    AgenticRequest:
+      type: object
+      required:
+        - message
+      properties:
+        agent_type:
+          $ref: '#/components/schemas/AgentType'
+        message:
+          type: string
+          description: The user message to the agent
+        data:
+          type: object
+          additionalProperties: true
+          description: Optional arbitrary data passed to the agent
+    AgentType:
+      type: string
+      description: Type of the agent handling the request
+      enum:
+        - SUPPORT
+        - GENERIC
+        - COMPLAINT
+        - SUPERVISOR
     TextGenerationRequest:
       title: TextGenerationRequest
       type: object
@@ -154,6 +319,59 @@ components:
         maxTokens:
           type: integer
           description: Maximum number of tokens that should be used during text generation. If not provided then 4097 is used.
+    AgenticResponse:
+      type: object
+      properties:
+        agentType:
+          $ref: '#/components/schemas/AgentType'
+        message:
+          type: string
+          description: The response message from the agent
+        metadata:
+          type: object
+          properties:
+            totalTokens:
+              type: integer
+              description: Total number of token taken by the last call.
+            promptTokens:
+              type: integer
+              description: Number of tokens taken by the input (prompt).
+            outputTokens:
+              type: integer
+              description: Number of tokens taken by the output.
+        sessionId:
+          type: string
+          format: uuid
+          description: Session identifier for tracking purposes
+    AgentTemplateResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Identifier of the agent template.
+        name:
+          type: string
+          description: Name of the agent template.
+        description:
+          type: string
+          description: Description of the agent template.
+        type:
+          type: string
+          enum:
+            - SUPPORT
+            - COMPLAINT
+          description: Type of the agent template.
+        mcpServers:
+          type: array
+          items:
+            $ref: '#/components/schemas/McpServer'
+        nativeTools:
+          type: array
+          items:
+            $ref: '#/components/schemas/GenericAgentTool'
+        enabled:
+          type: boolean
+          description: Whether the agent template is enabled.
     GenerationResponse:
       title: GenerationResponse
       type: object
@@ -192,6 +410,41 @@ components:
               content:
                 type: string
                 description: 'Content of the message. Depending on the role parameter it can be a background instruction, user instruction or AI response.'
+    AgentTemplateSearch:
+      type: object
+      properties:
+        q:
+          type: string
+          description: |
+            A standard query parameter is used to search for specific values. 
+            
+            See: [Standard practises - Query parameter](https://developer.emporix.io/docs/content/q-param/)
+    McpServer:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of the MCP server.
+        enabled:
+          type: boolean
+          description: Whether the MCP server is enabled.
+        type:
+          type: string
+          description: Type of the MCP server.
+        tools:
+          type: array
+          items:
+            type: string
+            description: Tool available for the MCP server.
+    GenericAgentTool:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of the generic agent tool.
+        enabled:
+          type: boolean
+          description: Whether the generic agent tool is enabled.
   securitySchemes:
     OAuth2:
       type: oauth2
@@ -200,6 +453,8 @@ components:
           scopes:
             ai.text_manage: Needed to execute actions related to the text generation.
             ai.completion_manage: Needed to execute actions related to the AI completions.
+            ai.agent_read: Needed to read AI agents
+            ai.agent_manage: Needed to manage AI agents
           tokenUrl: 'https://api.emporix.io/oauth/token'
   parameters:
     path_tenant:
@@ -238,6 +493,45 @@ components:
         * If the header is empty, the endpoint will assume that the localized fields are provided in the default language defined in the Configuration Service.
 
         **Note**: You can provide the localized fields only in languages defined in the Configuration Service. In case the fields are provided in languages that are not defined in the Configuration Service, the request will be rejected.
+    header_xTotalCount:
+      schema:
+        type: boolean
+      in: header
+      name: X-Total-Count
+      description: Flag indicating whether the total number of retrieved results should be returned.
+    qParam:
+      in: query
+      name: q
+      description:  |
+        A standard query parameter is used to search for specific values. 
+        
+        See: [Standard practises - Query parameter](https://developer.emporix.io/docs/content/q-param)
+      schema:
+        type: string
+    pageSize:
+      schema:
+        type: string
+      in: query
+      name: pageSize
+      description: The number of documents to be retrieved per page.
+    pageNumber:
+      schema:
+        type: string
+      in: query
+      name: pageNumber
+      description: The page number to be retrieved. The size of the pages should be specified by the pageSize parameter.
+    sort:
+      schema:
+        type: string
+      in: query
+      name: sort
+      description: List of properties used to sort the results, separated by colons.
+    fields:
+      schema:
+        type: string
+      in: query
+      name: fields
+      description: Fields to be returned in the response.
   responses:
     401_resp_common:
       description: The authorization token is invalid or has expired.
@@ -319,7 +613,23 @@ components:
             Text Generation Response:
               value:
                 id: en
-                result: 'Mini pipe cutters are small cutting tools that are designed to precisely and effectively cut through pipes ranging in size from 3 to 16 millimeters. Unlike some larger pipe cutters, these mini versions are conveniently small and light enough to be carried around easily and used in places where a standard-sized cutter may not be able to fit. They are typically made of hardened steel and are designed to work on most types of tubing and thin-walled plastic piping. The continuous interlocking jaws hold the pipe securely while the cutting blade smoothly and accurately creates a precise and neat cutting edge. Mini pipe cutters are the perfect tool for plumbers, DIYers and those tackling smaller scale pipe work in hard-to-reach places.'
+                result: 'Mini pipe cutters are small cutting tools that are designed to precisely and effectively cut through pipes ranging in size from 3 to 16 millimeters. Unlike some larger pipe cutters, these mini versions are conveniently small and light enough to be carried around easily and used in places where a standard-sized cutter may not be able to fit. They are typically made of hardened steel and are designed to work on most types of tubing and thin-walled plastic piping. The continuous interlocking jaws hold the pipe securely while the cutting blade smoothly and accurately creates a precise and neat cutting edge. Mini pipe cutters are the perfect tool for plumbers and those tackling smaller scale pipe work in hard-to-reach places.'
+    200_resp_GET_agent_chat:
+      description: ''
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AgenticResponse'
+          examples:
+            Agentic Response:
+              value:
+                agentType: supervisor
+                message: 'Found a product with "EON1243" code. Details...'
+                sessionId: fe91d168-4ce9-4b4d-8451-0029035b34a5
+                metadata:
+                  promptTokens: 150
+                  outputTokens: 20
+                  totalTokens: 170
   requestBodies:
     TextGeneration:
       content:
@@ -332,6 +642,16 @@ components:
                 id: en
                 prompt: 'Generate a long description for product ''pipe cutter'' in language EN '
                 maxTokens: 2048
+    AgenticChat:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AgenticRequest'
+          examples:
+            Agentic Chat request:
+              value:
+                agentType: SUPERVISOR
+                message: 'Find a product with "EON1243" code'
     Completion:
       content:
         application/json:
@@ -344,4 +664,30 @@ components:
                 messages:
                   - role: SYSTEM
                     content: You are an assistant responsible for creating a configuration based on information provided by user.
-  examples: {}
+    AgentTemplateSearch:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AgentTemplateSearch'
+          examples:
+            Search Request:
+              value:
+                q: name:~Support
+  examples:
+    AgentTemplatesResponse:
+      value:
+        - id: 123
+          name: Support Agent
+          description: Support agent template
+          type: SUPPORT
+          enabled: true
+          mcpServers:
+            - name: Order MCP server
+              enabled: true
+              type: MCP_SERVER
+              tools:
+                - get-orders
+                - get-order
+          nativeTools:
+            - name: Slack
+              enabled: true
